--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "@types/material-ui": "^0.21.1",
-    "@types/react": "^16.0.38",
+    "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
@@ -18,6 +18,7 @@
     "css-loader": "^0.28.10",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.20.0",
+    "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
