--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-router-redux": "^5.0.12",
+    "@types/redux-promise": "^0.5.28",
     "@types/redux-thunk": "^2.1.0",
     "css-loader": "^0.28.10",
     "isomorphic-fetch": "^2.2.1",
@@ -30,6 +31,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
     "redux": "^3.7.2",
+    "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
