--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "./data/**/*",
