--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "jsx": "react",
     "module": "es2015",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "lib": ["es2015", "dom"]
   },
   "include": [
     "./data/**/*",
