--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
     "module": "es2015",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "lib": ["es2015", "dom"]
+    "lib": ["es2017", "dom"],
+    "noEmitOnError": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
   },
   "include": [
     "./data/**/*",
