--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.28.10",
     "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.20.0",
+    "material-ui-fullscreen-dialog": "^0.7.2",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
