--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^5.0.15",
     "@types/react-router-dom": "^4.2.4",
     "@types/react-router-redux": "^5.0.12",
+    "@types/react-virtualized": "^9.7.13",
     "@types/redux-promise": "^0.5.28",
     "@types/redux-thunk": "^2.1.0",
     "compression": "^1.7.2",
@@ -34,6 +35,8 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "next",
+    "react-sizeme": "^2.3.6",
+    "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
