--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
     "> 1%",
     "ie > 9"
   ],
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "/__tests__/.*\\.(ts|tsx|js)$"
+  },
   "dependencies": {
     "@types/material-ui": "^0.21.1",
     "@types/react": "^16.0.40",
@@ -46,11 +57,13 @@
     "app": "./node_modules/.bin/http-server dist -p 3000",
     "build": "rimraf ./dist && webpack --config webpack/prod.config.js",
     "start": "webpack-dev-server --watch --config webpack/dev.config.js",
-    "test": "jest --verbose",
     "webpack-stats": "webpack --config var/webpack/prod.config.js --profile --json > webpack-stats.json",
-    "analyze-bundle": "rimraf ./dist && webpack --config var/webpack/analyzeBundle.js"
+    "analyze-bundle": "rimraf ./dist && webpack --config var/webpack/analyzeBundle.js",
+    "test": "jest --verbose --watch"
   },
   "devDependencies": {
+    "@types/jest": "^22.2.0",
+    "@types/redux-mock-store": "0.0.13",
     "autoprefixer": "^7.2.6",
     "awesome-typescript-loader": "^3.5.0",
     "babel-cli": "^6.26.0",
@@ -73,6 +86,7 @@
     "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
+    "ts-jest": "^22.4.2",
     "tslint": "^5.9.1",
     "tslint-config-airbnb": "^5.7.0",
     "typescript": "^2.7.2",
